--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>加藤泰明のポートフォリオサイト</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="css/4-1-4.css">
+  <link rel="stylesheet" type="text/css" href="css/5-1-11.css">
 </head>
 <body>
-  <h1>加藤 泰明</h1>
-  <p>webデザイナー見習いです。ドットインストールで勉強中です！</p>
-
-  
+  <div id="splash">
+    <div id="splash_logo"><img src="img/ToyToiToulogo.png" alt="" class="fadeUp"></div><!--画像部分は適宜差し換えてください-->
+    <!--/splash--></div>
+    <div id="container">
+    <p>ローディング後、この画面が見えます。</p>
+    <!--/container--></div>
+    <div class="openbtn"><span></span><span></span><span></span></div>
+<nav id="g-nav">
+<div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+<ul>
+<li><a href="#">Top</a></li> 
+<li><a href="#">About</a></li> 
+<li><a href="#">Service</a></li> 
+<li><a href="#">Contact</a></li> 
+</ul>
+</div>
+</nav>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXv
+ZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/4-1-4.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="js/5-1-11.js"></script>
 </body>
 </html>
