--- a/index.html
+++ b/index.html
@@ -4,32 +4,65 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="css/4-1-4.css">
-  <link rel="stylesheet" type="text/css" href="css/5-1-11.css">
+  <title>美容室 Love</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/door.css">
+  <link rel="stylesheet" href="css/mirror.css">
+  <link rel="stylesheet" href="css/LightBeam.css">
+  <link rel="stylesheet" href="css/menu.css">
 </head>
 <body>
-  <div id="splash">
-    <div id="splash_logo"><img src="img/ToyToiToulogo.png" alt="" class="fadeUp"></div><!--画像部分は適宜差し換えてください-->
-    <!--/splash--></div>
-    <div id="container">
-    <p>ローディング後、この画面が見えます。</p>
-    <!--/container--></div>
-    <div class="openbtn"><span></span><span></span><span></span></div>
-<nav id="g-nav">
-<div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
-<ul>
-<li><a href="#">Top</a></li> 
-<li><a href="#">About</a></li> 
-<li><a href="#">Service</a></li> 
-<li><a href="#">Contact</a></li> 
-</ul>
-</div>
-</nav>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXv
-ZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="js/4-1-4.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="js/5-1-11.js"></script>
+  <div class="door">
+    <div class="doorwindow"></div>
+    <img src="img/door2.png" alt="美容室Loveのドアです。" id="door" ></div>
+    <div class="overlay-door"></div>
+    <div class="overlay-door2">
+      <header>
+        <div class="logo">
+          <h1>美容室 LOVE</h1>
+        </div>
+          <div class="pc-menu">
+            <nav>
+              <ul>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">menu</a></li>
+              </ul>
+            </nav>
+          </div>
+        <div class="sp-menu">
+          <span class="material-icons" id="open">menu</span>
+          
+        </div>
+      </header>
+      <div class="mirror" id="mirror"> 
+        <img src="img/mi1.png" class="mirror-img, mi1, m-fade-in">
+        <img src="img/mi2.png" class="mirror-img, mi2, m-fade-in-opacity">
+        <img src="img/mi3.png" class="mirror-img, mi3, m-fade-in-left">
+        <img src="img/mi4.png" class="mirror-img, mi4, m-fade-in-top">
+        <img src="img/mi5.png" class="mirror-img, mi5, m-fade-in-right">
+        <img src="img/mi6.png" class="mirror-img, mi6, m-fade-in-bottom">
+        <div class="white"></div>
+        <img src="img/mi7.png" class="mirror-img, mi7, m-fade-in-bottom">
+        <img src="img/mi8.png" class="mirror-img, mi8, m-fade-in-opacity">
+        <img src="img/mi9.png" class="mirror-img, mi9, m-fade-in-opacity">
+        <img src="img/mi10.png" class="mirror-img, mi10, m-fade-in-opacity">
+      </div>
+    </div>
+    <div class="menu-overlay">
+      <span class="material-icons" id="close">close</span>
+      <nav>
+        <ul>
+          <li><a href="#">menu</a></li>
+          <li><a href="#">menu</a></li>
+          <li><a href="#">menu</a></li>
+        </ul>
+      </nav>
+    </div>
+  
+
+  <script src="js/main1.js"></script>
+  <script src="js/main2.js"></script>
 </body>
 </html>
