--- a/index.html
+++ b/index.html
@@ -15,49 +15,62 @@
     <div class="overlay-door"></div>
     <div class="overlay-door2">
       <header>
-        <div class="logo">
-          <h1>美容室 LOVE</h1>
+        <div class="logo"><h1>美容室 LOVE</h1>
         </div>
-          <div class="pc-menu">
-            <nav>
-              <ul>
-                <li><a href="#">menu</a></li>
-                <li><a href="#">menu</a></li>
-                <li><a href="#">menu</a></li>
-              </ul>
-            </nav>
-          </div>
+        <div class="pc-menu">
+          <nav>
+            <ul>
+              <li><a href="#">menu</a></li>
+              <li><a href="#">menu</a></li>
+              <li><a href="#">menu</a></li>
+            </ul>
+          </nav>
+        </div>
+
         <div class="sp-menu">
           <span class="material-icons" id="open">menu</span>
-          
         </div>
       </header>
-      <div class="mirror" id="mirror"> 
-        <img src="img/mi1.png" class="mirror-img, mi1, m-fade-in">
-        <img src="img/mi2.png" class="mirror-img, mi2, m-fade-in-opacity">
-        <img src="img/mi3.png" class="mirror-img, mi3, m-fade-in-left">
-        <img src="img/mi4.png" class="mirror-img, mi4, m-fade-in-top">
-        <img src="img/mi5.png" class="mirror-img, mi5, m-fade-in-right">
-        <img src="img/mi6.png" class="mirror-img, mi6, m-fade-in-bottom">
-        <div class="white"></div>
-        <img src="img/mi7.png" class="mirror-img, mi7, m-fade-in-bottom">
-        <img src="img/mi8.png" class="mirror-img, mi8, m-fade-in-opacity">
-        <img src="img/mi9.png" class="mirror-img, mi9, m-fade-in-opacity">
-        <img src="img/mi10.png" class="mirror-img, mi10, m-fade-in-opacity">
+
+      <div class="menu-overlay">
+        <span class="material-icons" id="close">close</span>
+        <nav>
+          <ul>
+            <li><a href="#">
+              <img src="img/concept.png">
+              menu</a></li>
+            <li><a href="#">
+              <img src="img/yokogao.png">
+              menu</a></li>
+            <li><a href="#">
+              <img src="img/contact.png">
+              menu</a></li>
+            <li><a href="#">
+              <img src="img/price.png">
+              menu</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
-    <div class="menu-overlay">
-      <span class="material-icons" id="close">close</span>
-      <nav>
-        <ul>
-          <li><a href="#">menu</a></li>
-          <li><a href="#">menu</a></li>
-          <li><a href="#">menu</a></li>
-        </ul>
-      </nav>
+
+
+      <main>
+        <div class="mirror" id="mirror"> 
+          <img src="img/mi1.png" class="mirrorImg, mi1, m-fade-in">
+          <img src="img/mi2.png" class="mirrorImg, mi2, m-fade-in-opacity">
+          <img src="img/mi3.png" class="mirrorImg, mi3, m-fade-in-left">
+          <img src="img/mi4.png" class="mirrorImg, mi4, m-fade-in-top">
+          <img src="img/mi5.png" class="mirrorImg, mi5, m-fade-in-right">
+          <img src="img/mi6.png" class="mirrorImg, mi6, m-fade-in-bottom">
+          <img src="img/mi7.png" class="mirrorImg, mi7, m-fade-in-bottom">
+          <img src="img/mi8.png" class="mirrorImg, mi8, m-fade-in-opacity">
+          <div class="white, m-fade-in-opacity"></div>
+          <img src="img/mi9.png" class="mirrorImg, mi9, m-fade-in-opacity">
+          <img src="img/mi10.png" class="mirrorImg, mi10, m-fade-in-opacity">
+      </main>
+      </div>
     </div>
   
 
-  <script src="js/main1.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
